[package]
name = "get-latin-definition"
version = "0.1.0"
authors = ["jsMRSoL <si_pitt@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
select = "0.4.3"